--- a/presentation.tex
+++ b/presentation.tex
@@ -109,6 +109,13 @@ Applications:
 \end{algorithm}
 \end{frame}
 
+% Constant Driving
+\begin{frame}{Constant Driving - $xi(t) = 0$}
+\begin{adjustbox}{max totalsize={\textwidth}{\textheight}}
+\input{tikz/standard/modifiedconstant.tikz}
+\end{adjustbox}
+\end{frame}
+
 % Linear Driving
 \begin{frame}{Linear Driving - $xi(t) = t$}
     \begin{tabular}{cc}
