exact solutions mentioned

--- a/presentation.tex
+++ b/presentation.tex
@@ -110,14 +110,14 @@ Applications:
 \end{frame}
 
 % Constant Driving
-\begin{frame}{Constant Driving - $xi(t) = 0$}
+\begin{frame}{Constant Driving - $\xi(t) = 0$}
 \begin{adjustbox}{max totalsize={\textwidth}{\textheight}}
 \input{tikz/standard/modifiedconstant.tikz}
 \end{adjustbox}
 \end{frame}
 
 % Linear Driving
-\begin{frame}{Linear Driving - $xi(t) = t$}
+\begin{frame}{Linear Driving - $\xi(t) = t$}
     \begin{tabular}{cc}
 \begin{adjustbox}{max totalsize={.3\textwidth}{.9\textheight}}
 \input{tikz/exactquadratic/linear.tikz}
