--- a/presentation.tex
+++ b/presentation.tex
@@ -18,6 +18,7 @@
 \usepackage[algosection,  linesnumbered]{algorithm2e}
 \usepackage{enumerate}
 \usepgfplotslibrary{groupplots}
+\usepgfplotslibrary{colorbrewer}
 \usepackage{filecontents}
 \usepackage{adjustbox}
 
@@ -127,5 +128,13 @@ Applications:
 \end{adjustbox}
 \end{tabular}
 \end{frame}
+
+% Square-Root Driving
+\begin{frame}{Square-Root Driving}
+\begin{adjustbox}{max totalsize={\textwidth}{\textheight}}
+\input{tikz/standard/kappa.tikz}
+\end{adjustbox}
+\end{frame}
+
 
 \end{document}
