line width changes

--- a/presentation.tex
+++ b/presentation.tex
@@ -143,4 +143,76 @@ Applications:
 \end{adjustbox}
 \end{frame}
 
+% Inverse Problem
+\begin{frame}{Inverse Problem}
+    Objective: Given the trace curve, find $\xi(t)$.
+\begin{adjustbox}{max totalsize={\textwidth}{\textheight}}
+\input{tikz/diagrams/conformalmapping.tikz}
+\end{adjustbox}
+\end{frame}
+
+% Examples of Inverse Problem
+\begin{frame}{Examples of Inverse Problem}
+Test Problem: Can show straight line of angle $\alpha \pi$ to real axis
+% Therefore c_\alpha \sqrt{t}
+%           c_\alpha = 2 ...
+% Show Fig 2.8
+\end{frame}
+
+% Further Examples
+\begin{frame}{Further Examples}
+% Fig 2.5
+\end{frame}
+
+% Further Examples
+\begin{frame}{Further Examples}
+% Fig 2.6
+\end{frame}
+
+% Two-Trace Evolution
+\begin{frame}{Two-Trace Evolution}
+    % (58) then (59)
+    % Then procedure is (60) -> (63) (Cubic)
+\end{frame}
+
+% Inverse Problem
+\begin{frame}{Inverse Problem}
+    Objective: Given the trace curve, find $\xi(t)$.
+\begin{adjustbox}{max totalsize={\textwidth}{\textheight}}
+\input{tikz/diagrams/conformalmapping.tikz}
+\end{adjustbox}
+\end{frame}
+
+% Inverse Problem
+\begin{frame}{Inverse Problem}
+    Objective: Given the trace curve, find $\xi(t)$.
+\begin{adjustbox}{max totalsize={\textwidth}{\textheight}}
+\input{tikz/diagrams/conformalmapping.tikz}
+\end{adjustbox}
+\end{frame}
+
+% Inverse Problem
+\begin{frame}{Inverse Problem}
+    Objective: Given the trace curve, find $\xi(t)$.
+\begin{adjustbox}{max totalsize={\textwidth}{\textheight}}
+\input{tikz/diagrams/conformalmapping.tikz}
+\end{adjustbox}
+\end{frame}
+
+% Inverse Problem
+\begin{frame}{Inverse Problem}
+    Objective: Given the trace curve, find $\xi(t)$.
+\begin{adjustbox}{max totalsize={\textwidth}{\textheight}}
+\input{tikz/diagrams/conformalmapping.tikz}
+\end{adjustbox}
+\end{frame}
+
+% Inverse Problem
+\begin{frame}{Inverse Problem}
+    Objective: Given the trace curve, find $\xi(t)$.
+\begin{adjustbox}{max totalsize={\textwidth}{\textheight}}
+\input{tikz/diagrams/conformalmapping.tikz}
+\end{adjustbox}
+\end{frame}
+
 \end{document}
