cos and sin diagrams

--- a/presentation.tex
+++ b/presentation.tex
@@ -151,6 +151,7 @@ Applications:
 \begin{adjustbox}{max totalsize={\textwidth}{\textheight}}
 \input{tikz/diagrams/conformalmapping.tikz}
 \end{adjustbox}
+Use algorithm of Kennedy (2004).
 \end{frame}
 
 % Examples of Inverse Problem
@@ -166,12 +167,17 @@ Test Problem: Can show straight line of angle $\alpha \pi$ to real axis
 \end{frame}
 
 % Further Examples
-\begin{frame}{Further Examples}
+\begin{frame}{Further Examples - Periodic Driving}
+\begin{adjustbox}{max totalsize={\textwidth}{\textheight}}
+\input{tikz/inverse/cos.tikz}
+\end{adjustbox}
 \end{frame}
 
 % Further Examples
-\begin{frame}{Further Examples}
-% Fig 2.6
+\begin{frame}{Further Examples - Periodic Driving}
+\begin{adjustbox}{max totalsize={\textwidth}{\textheight}}
+\input{tikz/inverse/sin.tikz}
+\end{adjustbox}
 \end{frame}
 
 % Two-Trace Evolution
