--- a/presentation.tex
+++ b/presentation.tex
@@ -223,16 +223,12 @@ Test Problem: Can show straight line of angle $\alpha \pi$ to real axis
 % Wedge Problem - Results
 \begin{frame}{Wedge Problem - Results}
 \begin{adjustbox}{max totalsize={\textwidth}{\textheight}}
-\input{tikz/diagrams/conformalmapping.tikz}
+\input{tikz/wedge/linear.tikz}
 \end{adjustbox}
 \end{frame}
 
 % Further Work
 \begin{frame}{Further Work}
-    Objective: Given the trace curve, find $\xi(t)$.
-\begin{adjustbox}{max totalsize={\textwidth}{\textheight}}
-\input{tikz/diagrams/conformalmapping.tikz}
-\end{adjustbox}
 \end{frame}
 
 \end{document}
