--- a/presentation.tex
+++ b/presentation.tex
@@ -1,4 +1,5 @@
 \documentclass{beamer}
+\beamertemplatenavigationsymbolsempty
 \usepackage[latin1]{inputenc}
 \usepackage{tikz}
 \usepackage{tikzscale}
@@ -159,7 +160,7 @@ Use algorithm of Kennedy (2004).
 
 % Examples of Inverse Problem
 \begin{frame}{Examples of Inverse Problem - $\xi(t) = c_\alpha \sqrt{t}$}
-Test Problem: Can show straight line of angle $\alpha \pi$ to real axis has the driving function
+Test Problem: Can show that a straight line of angle $\alpha \pi$ to real axis has the driving function
 \begin{align*}
     \Rightarrow \xi(t) &= c_\alpha \sqrt{t} \\
     c_\alpha &= 2\frac{1-2\alpha}{\sqrt{\alpha(1 - \alpha)}}
