Seeing if GitHub Desktop works on Mac

--- a/presentation.tex
+++ b/presentation.tex
@@ -230,4 +230,6 @@ Test Problem: Can show that a straight line of angle $\alpha \pi$ to real axis h
     \end{itemize}
 \end{frame}
 
+% Commit test !!!
+
 \end{document}
